--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
         <main>
             <div  id="ind-score">
                 <h1>IND</h1>
-                <div class="ball">
-                    <div class="circle">1</div>
-                    <div class="circle">6</div>
-                    <div class="circle">4</div>
-                    <div class="circle">2</div>
-                    <div class="circle">1</div>
-                    <div class="circle">4</div>
+                <div class="ball" id="ind">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
                 </div>
                 <div class="run-wick">
-                    <span id="run-ind">18</span>
+                    <span id="run-ind">0</span>
                     <span>/</span>
-                    <span id="wick-pak">0</span>
+                    <span id="wick-ind">0</span>
                 </div>
             </div>
             <div  id="pak-score">
                 <h1>PAK</h1>
-                <div class="ball">
-                    <div class="circle">1</div>
-                    <div class="circle">4</div>
-                    <div class="circle">2</div>
-                    <div class="circle">W</div>
-                    <div class="circle">6</div>
-                    <div class="circle">1</div>
+                <div class="ball" id="pak">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
                 </div>
                 <div class="run-wick">
-                    <span id="run-pak">14</span>
+                    <span id="run-pak">0</span>
                     <span>/</span>
-                    <span id="wick-pak">1</span>
+                    <span id="wick-pak">0</span>
                 </div>
             </div>
         </main>
@@ -51,4 +51,5 @@
         </footer>
     </div>
 </body>
+<script src="app.js"></script>
 </html>
